Font colors changed

--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,17 @@ header {
   background: #6aedf7;
 }
 
+h1 {
+  color: #7b7d70;
+}
+
+h2 {
+  color: #4eafb8;
+}
+
+p {
+  color: #ff8641;
+}
 
 /*---------- FOOTER ----------*/
 
@@ -81,6 +92,17 @@ footer {
     background-color: darkblue;
   }
   
+  h1 {
+    color: #02cbd2;
+  }
+  
+  h2 {
+    color: #fcc02a;
+  }
+  
+  p {
+    color: #7b8f8e;
+  }
 }
 
 
@@ -109,4 +131,15 @@ footer {
     background-color: darksalmon;
   }
    
+  h1 {
+    color: #6e4b61;
+  }
+  
+  h2 {
+    color: #cabd61;
+  }
+  
+  p {
+    color: #c19e74;
+  }
 }
